# CalendarAppChallenge

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/model/: calendar.py  calendar.py.txt
app/services/: persistence.py  util.py
app/view/: console.py
resources/: app_model_diagram.drawio
tests/: test_calendar.py
