[tool.poetry]
name = "app"
version = "0.1.0"
description = "A simple console Calendar App"
authors = ["jahlon <jahlon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calendar = "app.main:main"